[GM3Restyling] Polish command menu update
- fix spacing around search matches
- fix command menu search match highlight

Screenshot: https://imgur.com/a/HkxQdmt

Fixed: 325442580
Change-Id: Ib24d5187bd51906cb221c1f65272a0fa6064e835
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6179683
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/components/quick_open/filteredListWidget.css
+++ b/front_end/ui/legacy/components/quick_open/filteredListWidget.css
@@ -83,7 +83,7 @@ devtools-text-prompt {
 }
 
 .filtered-list-widget-item {
-  white-space: nowrap;
+  white-space: break-spaces;
   overflow: hidden;
   text-overflow: ellipsis;
   align-self: center;
@@ -95,11 +95,7 @@ devtools-text-prompt {
   color: var(--sys-color-state-disabled);
 }
 
-.filtered-list-widget-item.two-rows span.highlight {
-  color: var(--sys-color-primary);
-}
-
-.filtered-list-widget-item.one-row span.highlight {
+.filtered-list-widget-item span.highlight {
   font-weight: var(--ref-typeface-weight-bold);
 }
 
@@ -152,7 +148,7 @@ devtools-text-prompt {
   gap: var(--sys-size-2);
 }
 
-.filtered-list-widget-item.two-rows .filtered-list-widget-title {
+.filtered-list-widget-item-wrapper:not(.search-mode) .filtered-list-widget-item.two-rows .filtered-list-widget-title {
   font-weight: var(--ref-typeface-weight-bold);
 }
 
