[toolbar] Fix vertical alignment of toolbar containers.
Fixed: 391065681
Bug: 388445687
Change-Id: Iebee3093546e34597a6c91af1eccb1fb65d036c9
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6185436
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/network/networkPanel.css
+++ b/front_end/panels/network/networkPanel.css
@@ -156,6 +156,7 @@
 
 .network-toolbar-container {
   display: flex;
+  align-items: flex-start;
   flex: none;
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
