Use `<devtools-new-data-grid>` in `WebBundleInfoView`.
Bug: 390346490
Change-Id: Ie32bd92e44ed51e8c3d95fddd4f127cab3b4da96
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6187104
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/network/components/WebBundleInfoView.css
+++ b/front_end/panels/network/components/WebBundleInfoView.css
@@ -5,6 +5,10 @@
  */
 :host {
   --icon-padding: 4px;
+
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .header {
@@ -16,4 +20,8 @@
 
 .icon {
   margin: 0 var(--icon-padding);
+}
+
+devtools-new-data-grid {
+  height: 100%;
 }
