[RPP] Status dialog: Hide stop button and make responsive
The stop button is only relevant to finish the recording. It cannot stop loading or processing the trace (without significant refactors).

The previous arrangeDialog() solution to narrow widths could trigger dramatic layout thrashing under certain (inconsistent repro) circumstances. It's solved with container queries and a simpler layout.

Demo: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6164069

Bug: 41470724
Change-Id: I681491c1959d4ace5c7d1c70238c64cad5c1e884
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6164069
Auto-Submit: Paul Irish <paulirish@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/timelineStatusDialog.css
+++ b/front_end/panels/timeline/timelineStatusDialog.css
@@ -55,17 +55,6 @@
   border-radius: 12px;
 }
 
-.timeline-status-dialog.small-dialog {
-  width: inherit;
-  justify-content: center;
-}
-
-.small-dialog > .stop-button {
-  align-self: center;
-  margin-top: 20px;
-  height: initial;
-}
-
 @media (forced-colors: active) {
   .timeline-status-dialog {
     border: 1px solid canvastext;
@@ -79,5 +68,28 @@
   .timeline-status-dialog .progress .indicator {
     forced-color-adjust: none;
     background-color: ButtonText;
+  }
+}
+
+:host {
+  container-type: inline-size;
+}
+
+/* 326 is the widths above (200 + 80) + a bunch of padding. calc() can't be used here sadly */
+@container (max-width: 326px) {
+  .timeline-status-dialog {
+    box-shadow: none;
+
+    .stop-button {
+      align-self: center;
+    }
+  }
+
+  .status-dialog-line {
+    flex-direction: column;
+
+    .label {
+      display: none;
+    }
   }
 }
