[RPP] Display field metrics in insights tab
https://i.imgur.com/DIcZ2vE.png (local + field)
https://i.imgur.com/vL7vk2C.png (just local)

Bug: 368135130
Change-Id: I9b7d9f2bfbc3ce01c4cbbcc051d6b0cf3e0f8b30
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6169823
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/sidebarSingleInsightSet.css
+++ b/front_end/panels/timeline/components/sidebarSingleInsightSet.css
@@ -9,9 +9,29 @@
   padding: 5px 10px;
 }
 
+.metrics {
+  display: grid;
+  align-items: end;
+  grid-template-columns: repeat(3, 1fr) 0.5fr;
+  grid-row-gap: 5px;
+}
+
+.row-border {
+  grid-column: 1/5;
+  border-top: var(--sys-size-1) solid var(--sys-color-divider);
+}
+
+.row-label {
+  visibility: hidden;
+  font-size: var(--sys-size-7);
+}
+
+.metrics--field .row-label {
+  visibility: visible;
+}
+
 .metrics-row {
-  display: flex;
-  flex-direction: row;
+  display: contents;
 }
 
 .metric {
@@ -28,7 +48,7 @@
 }
 
 .metric-value {
-  font-size: var(--sys-size-11);
+  font-size: var(--sys-size-10);
 }
 
 .metric-value-bad {
