Simplify device emulation toolbar composition
Fixed: 379846475
Change-Id: I99fd9ef09e8724aecf2b4a3227785eda8fb4dfb2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6187107
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/emulation/deviceModeView.css
+++ b/front_end/panels/emulation/deviceModeView.css
@@ -30,21 +30,12 @@ devtools-toolbar {
   }
 }
 
-devtools-toolbar.device-mode-toolbar-fixed-size {
-  flex: 0 1 auto;
+devtools-toolbar.main-toolbar {
+  margin: 0 auto;
 }
 
 devtools-toolbar.device-mode-toolbar-options {
-  position: sticky;
-  right: 0;
   flex: none;
-}
-
-.device-mode-toolbar-spacer {
-  flex: 1 1 0;
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
 }
 
 .device-mode-content-clip {
