[Console Insights] Add animation to code blocks
Screencasts: https://imgur.com/a/MnHUyhU

Bug: 375556018
Change-Id: I4ab0065461b7a60bdb32b63f242205156d3fbcc5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6186579
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/components/markdown_view/markdownView.css
+++ b/front_end/ui/components/markdown_view/markdownView.css
@@ -13,10 +13,19 @@
   to { width: 100%; }
 }
 
+@keyframes expand {
+  from { height: 0; }
+  to { height: auto; }
+}
+
 .animating {
   overflow: hidden;
   white-space: nowrap;
   animation: typing 0.4s steps(40, end);
+}
+
+devtools-code-block.animating {
+  animation: expand 0.1s linear;
 }
 
 .pending {
