[cleanup] Remove unnecessary shadow roots in device mode toolbar.
The shadow roots were originally required due to the enforced shadow DOM
by the old `UI.Toolbar.Toolbar`, but with the new light DOM approach,
these are just unnecessary.

Bug: 391381439, 388445687
Change-Id: Ia1a99363e82bd624c91d29bda0654cd5ab63be30
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6194452
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/emulation/deviceModeView.css
+++ b/front_end/panels/emulation/deviceModeView.css
@@ -20,6 +20,15 @@
   align-items: stretch;
 }
 
+.device-mode-x {
+  margin: 0 1px;
+  font-size: 16px;
+}
+
+.device-mode-empty-toolbar-element {
+  width: 0;
+}
+
 devtools-toolbar {
   overflow: hidden;
   flex: 0 100000 auto;
