--- a/front_end/panels/application/components/interestGroupAccessGrid.css
+++ b/front_end/panels/application/components/interestGroupAccessGrid.css
@@ -11,9 +11,9 @@
   font-size: 15px;
 }
 
-devtools-data-grid-controller {
-  border: 1px solid var(--sys-color-divider);
+devtools-new-data-grid {
   margin-top: 20px;
+  height: 200px;
 }
 
 .info-icon {
