Cookie controls tool fixes
Issues fixed by this CL:

1. Reload infobar adjustments. This includes changing the background
color, changing the info icon color to match the button, and adding
animation to the infobar to draw user attention to it when it
appears.

2. Change the card to fill the width (with margins) rather than
having a max width.

Before:
http://screencast/cast/NTQ1MDAxODQxNTcwNjExMnwxNTVkMDI2OS0xMw

After:
http://screencast/cast/Njc0NDg2NTgyNzE5MjgzMnwxYzA5ZGYyZC1iNg

Bug: 375352611,b/382259993,b/382259852
Change-Id: I25b9fe94a3068263dcf41743dc381b5a63344a08
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6164389
Reviewed-by: Shuran Huang <shuuran@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Joshua Thomas <masnoble@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/design_tokens.css
+++ b/front_end/design_tokens.css
@@ -107,6 +107,8 @@
   --sys-typescale-body5-line-height: 16px;
   --sys-typescale-monospace-line-height: 1.2;
   --combobox-dropdown-arrow: var(--image-file-arrow-drop-down-light);
+  --sys-motion-duration-long2: 500ms;
+  --sys-motion-curve-spatial: cubic-bezier(0.27, 1.06, 0.18, 1.00);
 }
 
 .theme-with-dark-background,
