[RPP] Create Bottom-up tree button on 3P table hover
Bottom up tree button on 3P table clicks and directs to a filtered
bottom up tree. The tree is "GroupBy" Third Party and selects
and expands the related 3P

https://screencast.googleplex.com/cast/NTk4MTk5MzA5ODU0MzEwNHwxNjFjY2UxZC0wNw

Bug:None
Change-Id: I3b905f6e72749ebd7ab0e3eb401c4b0879392863
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6171828
Auto-Submit: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/timelineSummary.css
+++ b/front_end/panels/timeline/components/timelineSummary.css
@@ -74,6 +74,9 @@
   tr .site-column {
     border-left: none;
     border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+    height: auto;
+    min-height: var(--sys-size-12);
+    align-content: center;
   }
 
   .bottom-filler-td,
@@ -83,10 +86,14 @@
 
   th {
     background-color: var(--sys-color-cdt-base-container);
+    font-weight: var(--ref-typeface-weight-medium);
   }
 
-  tr.revealed.selected {
-    background-color: transparent;
+  tr.revealed:hover {
+    .button-container {
+      align-items: center;
+      display: block;
+    }
   }
 }
 
@@ -126,4 +133,15 @@
   text-overflow: ellipsis;
   overflow: inherit;
   max-width: 60%;
+}
+
+.hover-bottom-up-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button-container {
+  display: none;
 }
