Fix command menu file name overflow
Fixed: 391556017
Change-Id: I78e8ac6ce665a3a1ec726b9f290b16151f0bc74f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6198218
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/components/quick_open/filteredListWidget.css
+++ b/front_end/ui/legacy/components/quick_open/filteredListWidget.css
@@ -100,6 +100,7 @@ devtools-text-prompt {
 }
 
 .filtered-list-widget-item .filtered-list-widget-title {
+  white-space: nowrap;
   flex: initial;
   overflow: hidden;
   text-overflow: ellipsis;
