[Console Insights] Handle timeout of the doConversation API
Show informative message to the user when the doConversation API times
out.

Screencast: https://i.imgur.com/UUbBuf1.mp4 (with artificially short
timeout of 2s)

Bug: 385122375
Change-Id: I9a51fe3d63f0018bbe0a102e65c0516551dd20c5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6197942
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -383,3 +383,7 @@ details h3 {
   color: var(--sys-color-on-surface-subtle);
   padding-left: var(--sys-size-6);
 }
+
+.error-message {
+  font: var(--sys-typescale-body4-bold);
+}
