Update some empty states texts after UX review
This is updating the DOM breakpoints text, and changes the Learn
more link not to be wrappable (new line).

Bug: 325443331
Change-Id: I49ce128b082352c26e71d98061e41a9b894fb5af
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6198406
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -579,6 +579,7 @@ select option {
     color: var(--sys-color-on-surface-subtle);
 
     > x-link {  /* stylelint-disable-line selector-type-no-unknown */
+      white-space: nowrap;
       margin-left: var(--sys-size-3);
     }
   }
