[RPP] Show notice when field is worse than local metrics
https://i.imgur.com/vjRKi3k.png

Bug: 368135130
Change-Id: I33c6d1933ca48896b160c69fd797b1894eafd1f4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6203523
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/sidebarSingleInsightSet.css
+++ b/front_end/panels/timeline/components/sidebarSingleInsightSet.css
@@ -87,3 +87,34 @@
     font-weight: var(--ref-typeface-weight-medium);
   }
 }
+
+.field-mismatch-notice {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  background-color: var(--sys-color-surface3);
+  margin: var(--sys-size-6) 0;
+  border-radius: var(--sys-shape-corner-extra-small);
+  border: var(--sys-size-1) solid var(--sys-color-divider);
+
+  h3 {
+    margin-block: 3px;
+    font: var(--sys-typescale-body4-medium);
+    color: var(--sys-color-on-base);
+    padding: var(--sys-size-5) var(--sys-size-6) 0 var(--sys-size-6);
+  }
+
+  .field-mismatch-notice__body {
+    padding: var(--sys-size-3) var(--sys-size-6) var(--sys-size-5) var(--sys-size-6);
+  }
+
+  button {
+    padding: 5px;
+    background: unset;
+    border: unset;
+    font: inherit;
+    color: var(--sys-color-primary);
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
