[cleanup] Make use of EmptyWidget in DOM breakpoints
Drive-by: make empty state class names more specific to avoid clashes
Bug: 325443331
Change-Id: Ia66526d645f75e0487ef809d4d3092170523bb06
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6205787
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -544,12 +544,12 @@ select option {
     max-width: var(--sys-size-29);
   }
 
-  .header {
+  .empty-state-header {
     font: var(--sys-typescale-headline5);
     margin-bottom: var(--sys-size-3);
   }
 
-  .description {
+  .empty-state-description {
     font: var(--sys-typescale-body4-regular);
     color: var(--sys-color-on-surface-subtle);
 
