[GM3Restyling] Update recorder start view
This removes the StartView component for the recorder and replaces
it with a simple unified start view.

Before: https://i.imgur.com/r5y7Vue.png
After: https://i.imgur.com/oBDG57E.png
Bug: 325443331
Change-Id: I01791d8a2415e361c212c9c4fd8b0b51de708c44
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6206086
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -558,6 +558,10 @@ select option {
       margin-left: var(--sys-size-3);
     }
   }
+
+  > devtools-button {
+    margin-top: var(--sys-size-7);
+  }
 }
 
 dt-icon-label {
