Use <devtools-new-data-grid> in the prerendering RuleSetGrid
To make it work, call onResize to the data grid and forward click events to the config elements.

Bug: 390346490
Change-Id: I2aea18013cfe7a84ca56d39e7e4a16f6d78bcdff
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6198366
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/application/preloading/components/ruleSetGrid.css
+++ b/front_end/panels/application/preloading/components/ruleSetGrid.css
@@ -15,8 +15,8 @@
   flex-direction: column;
 }
 
-devtools-data-grid-controller {
-  border: 1px solid var(--sys-color-divider);
+devtools-new-data-grid {
+  flex: auto;
 }
 
 .inline-icon {
