Use <devtools-new-data-grid> in the ProloadingGrid
Bug: 390346490
Change-Id: Id855a91bfdf2b46725710ef4c60d747cd5ac55ad
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6207770
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/application/preloading/components/preloadingGrid.css
+++ b/front_end/panels/application/preloading/components/preloadingGrid.css
@@ -30,8 +30,8 @@
   color: var(--sys-color-token-subtle);
 }
 
-devtools-data-grid-controller {
-  border: 1px solid var(--sys-color-divider);
+devtools-new-data-grid {
+  flex: auto;
 }
 
 .inline-icon {
