[RPP] Fix a11y 3P table navigation and keyboard navigation
- Adds table label for focus (b/392169056)
- Adds aria-sort label on column headers (b/392649075)
- Includes hover button on select for keyboard navigation (b/392646319)

Bug:392649075,392169056,392646319
Change-Id: I5fad0ae43df87e0ea562f2fde35890d810db1872
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6209999
Commit-Queue: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/timelineSummary.css
+++ b/front_end/panels/timeline/components/timelineSummary.css
@@ -89,7 +89,8 @@
     font-weight: var(--ref-typeface-weight-medium);
   }
 
-  tr.revealed:hover {
+  tr.revealed:hover,
+  tr.selected {
     .button-container {
       align-items: center;
       display: block;
