--- a/front_end/panels/changes/changesView.css
+++ b/front_end/panels/changes/changesView.css
@@ -4,12 +4,12 @@
  * found in the LICENSE file.
  */
 
-[slot="insertion-point-main"] {
+[slot="main"] {
   flex-direction: column;
   display: flex;
 }
 
-[slot="insertion-point-sidebar"] {
+[slot="sidebar"] {
   overflow: auto;
 }
 
