Fix focus ring in learn more link in the recorder panel
Drive-by: add jslog context
Fixed: 392992459
Change-Id: Ia2fce9de54c845306ea04d998f388a3c51c42c0e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6212662
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/recorder/recorderController.css
+++ b/front_end/panels/recorder/recorderController.css
@@ -137,6 +137,7 @@ devtools-recording-list-view {
   outline-offset: 3px;
 }
 
-.feedback .x-link:focus-visible {
+.feedback .x-link:focus-visible,
+.empty-state-description .x-link:focus-visible {
   outline: -webkit-focus-ring-color auto 1px;
 }
