[GM3Restyling] Update rest of outline views
Also adjust micro buttton

Bug: 325443114
Change-Id: If1672f7fa785785079d507b5b99a9e2911c20b50
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6213550
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/elements/elementsTreeOutline.css
+++ b/front_end/panels/elements/elementsTreeOutline.css
@@ -116,20 +116,18 @@
 .elements-disclosure li.parent:not(.always-parent)::before {
   box-sizing: border-box;
   user-select: none;
-  mask-image: var(--image-file-triangle-right);
+  mask-image: var(--image-file-arrow-collapse);
   height: 14px;
   width: 14px;
   content: "\A0\A0";
   color: transparent;
   text-shadow: none;
-  margin-left: -3px;
+  margin: -3px 2px 0 -3px;
   background-color: var(--icon-default);
-  transition: transform 200ms;
 }
 
 .elements-disclosure li.parent.expanded::before {
-  transform: rotate(90deg);
-  margin-top: -2px;
+  mask-image: var(--image-file-arrow-drop-down);
 }
 
 .elements-disclosure li .selection {
