--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -196,6 +196,11 @@ iframe.fill {
   background-color: var(--sys-color-cdt-base-container);
 }
 
+.overflow-y-auto {
+  overflow: hidden auto;
+  background-color: var(--sys-color-cdt-base-container);
+}
+
 iframe.widget {
   position: absolute;
   width: 100%;
