--- a/front_end/panels/sources/components/breakpointsView.css
+++ b/front_end/panels/sources/components/breakpointsView.css
@@ -59,19 +59,19 @@ details > summary:hover {
 details > summary::before {
   display: block;
   user-select: none;
-  mask-image: var(--image-file-triangle-right);
+  mask-image: var(--image-file-arrow-collapse);
   background-color: var(--icon-default);
   content: "";
-  height: 14px;
-  min-width: 14px;
-  max-width: 14px;
+  height: 16px;
+  min-width: 16px;
+  max-width: 16px;
+  margin-top: -2px;
   margin-left: -4px;
   overflow: hidden;
-  transition: transform 200ms;
 }
 
 details[open] > summary::before {
-  transform: rotate(90deg);
+  mask-image: var(--image-file-arrow-drop-down);
 }
 
 .group-header {
