--- a/front_end/ui/legacy/checkboxTextLabel.css
+++ b/front_end/ui/legacy/checkboxTextLabel.css
@@ -34,6 +34,7 @@ input.inside-datagrid {
 .dt-checkbox-text {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 
   input:disabled ~ & {
     opacity: 38%;
