Consolidate third-party cookie console messages
Instead of having many console messages that warn about third party
cookies, there is only a single message that points the user to the
cookie report tool when the privacy ui is enabled

Before: https://screenshot.googleplex.com/55n9bTqwz3UKxdw.png
After: https://screenshot.googleplex.com/UCqDFGAk6o4Bp6W.png

Bug: 352364594
Change-Id: Ifabdee8c3573f191128bb3a5d35ab971856d93f8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6185651
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Shuran Huang <shuuran@chromium.org>
Commit-Queue: Joshua Thomas <masnoble@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -459,6 +459,11 @@
   margin-left: 4px;
 }
 
+.cookie-report-anchor {
+  margin-top: -3px;
+  margin-bottom: -5px;
+}
+
 .console-message-badge {
   float: right;
   margin-left: 4px;
