[RPP] Make 3P table column headers accessible by keyboard
Bug:392645972
Change-Id: I4214cc3325c296cfe38d1509b6cc8bbbb7e8f04e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6210000
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/components/timelineSummary.css
+++ b/front_end/panels/timeline/components/timelineSummary.css
@@ -96,6 +96,13 @@
       display: block;
     }
   }
+
+  /* Default data-grid has this element on the edge of the rows,
+    we don't need them for the 3P table. So for now set display to none.
+   */
+  .corner {
+    display: none;
+  }
 }
 
 .widget.vbox.timeline-tree-view {
