--- a/front_end/ui/legacy/components/data_grid/dataGrid.css
+++ b/front_end/ui/legacy/components/data_grid/dataGrid.css
@@ -189,7 +189,8 @@
   padding-right: 14px;
 }
 
-.data-grid th.sortable:hover {
+.data-grid th.sortable:hover,
+.data-grid th.sortable:focus-within {
   background-color: var(--sys-color-state-hover-on-subtle);
 }
 
